--- a/JSON Gym/Pandas_JSON_Gym.ipynb
+++ b/JSON Gym/Pandas_JSON_Gym.ipynb
@@ -6289,35 +6289,35 @@
           "height": 269
         },
         "id": "Ce-k0GAFOuXS",
-        "outputId": "e2495a86-c61d-4bc1-aba2-fe5644d67a83"
+        "outputId": "77bb1df4-1f8d-4bc1-b754-4133f585fc59"
       },
-      "execution_count": 66,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "   pets_name pets_species pets_favFoods  pets_birthYear     pets_photo_URL  \\\n",
-              "0  Purrsloud          Cat      wet food            2016  /images/cat-2.jpg   \n",
-              "1  Purrsloud          Cat      dry food            2016  /images/cat-2.jpg   \n",
-              "2  Purrsloud          Cat      any food            2016  /images/cat-2.jpg   \n",
-              "3  Barksalot          Dog           NaN            2008  /images/dog-1.jpg   \n",
-              "4  Meowsalot          Cat          tuna            2012  /images/cat-1.jpg   \n",
-              "5  Meowsalot          Cat        catnip            2012  /images/cat-1.jpg   \n",
-              "6  Meowsalot          Cat        celery            2012  /images/cat-1.jpg   \n",
+              "   pets_name pets_species pets_favFoods pets_features_size  \\\n",
+              "0  Purrsloud          Cat      wet food             medium   \n",
+              "1  Purrsloud          Cat      dry food             medium   \n",
+              "2  Purrsloud          Cat      any food             medium   \n",
+              "3  Barksalot          Dog           NaN              short   \n",
+              "4  Meowsalot          Cat          tuna              large   \n",
+              "5  Meowsalot          Cat        catnip              large   \n",
+              "6  Meowsalot          Cat        celery              large   \n",
               "\n",
-              "  pets_features_size  pets_features_weight  \n",
-              "0             medium                    10  \n",
-              "1             medium                    10  \n",
-              "2             medium                    10  \n",
-              "3              short                     5  \n",
-              "4              large                    15  \n",
-              "5              large                    15  \n",
-              "6              large                    15  "
+              "   pets_features_weight  \n",
+              "0                    10  \n",
+              "1                    10  \n",
+              "2                    10  \n",
+              "3                     5  \n",
+              "4                    15  \n",
+              "5                    15  \n",
+              "6                    15  "
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-081d19b3-042c-4f9f-9a8d-4d7b363aefe7\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-1cde77ac-2547-4e30-b0c1-3141fc438310\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -6339,8 +6339,6 @@
               "      <th>pets_name</th>\n",
               "      <th>pets_species</th>\n",
               "      <th>pets_favFoods</th>\n",
-              "      <th>pets_birthYear</th>\n",
-              "      <th>pets_photo_URL</th>\n",
               "      <th>pets_features_size</th>\n",
               "      <th>pets_features_weight</th>\n",
               "    </tr>\n",
@@ -6351,8 +6349,6 @@
               "      <td>Purrsloud</td>\n",
               "      <td>Cat</td>\n",
               "      <td>wet food</td>\n",
-              "      <td>2016</td>\n",
-              "      <td>/images/cat-2.jpg</td>\n",
               "      <td>medium</td>\n",
               "      <td>10</td>\n",
               "    </tr>\n",
@@ -6361,8 +6357,6 @@
               "      <td>Purrsloud</td>\n",
               "      <td>Cat</td>\n",
               "      <td>dry food</td>\n",
-              "      <td>2016</td>\n",
-              "      <td>/images/cat-2.jpg</td>\n",
               "      <td>medium</td>\n",
               "      <td>10</td>\n",
               "    </tr>\n",
@@ -6371,8 +6365,6 @@
               "      <td>Purrsloud</td>\n",
               "      <td>Cat</td>\n",
               "      <td>any food</td>\n",
-              "      <td>2016</td>\n",
-              "      <td>/images/cat-2.jpg</td>\n",
               "      <td>medium</td>\n",
               "      <td>10</td>\n",
               "    </tr>\n",
@@ -6381,8 +6373,6 @@
               "      <td>Barksalot</td>\n",
               "      <td>Dog</td>\n",
               "      <td>NaN</td>\n",
-              "      <td>2008</td>\n",
-              "      <td>/images/dog-1.jpg</td>\n",
               "      <td>short</td>\n",
               "      <td>5</td>\n",
               "    </tr>\n",
@@ -6391,8 +6381,6 @@
               "      <td>Meowsalot</td>\n",
               "      <td>Cat</td>\n",
               "      <td>tuna</td>\n",
-              "      <td>2012</td>\n",
-              "      <td>/images/cat-1.jpg</td>\n",
               "      <td>large</td>\n",
               "      <td>15</td>\n",
               "    </tr>\n",
@@ -6401,8 +6389,6 @@
               "      <td>Meowsalot</td>\n",
               "      <td>Cat</td>\n",
               "      <td>catnip</td>\n",
-              "      <td>2012</td>\n",
-              "      <td>/images/cat-1.jpg</td>\n",
               "      <td>large</td>\n",
               "      <td>15</td>\n",
               "    </tr>\n",
@@ -6411,8 +6397,6 @@
               "      <td>Meowsalot</td>\n",
               "      <td>Cat</td>\n",
               "      <td>celery</td>\n",
-              "      <td>2012</td>\n",
-              "      <td>/images/cat-1.jpg</td>\n",
               "      <td>large</td>\n",
               "      <td>15</td>\n",
               "    </tr>\n",
@@ -6422,7 +6406,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-081d19b3-042c-4f9f-9a8d-4d7b363aefe7')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1cde77ac-2547-4e30-b0c1-3141fc438310')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -6474,12 +6458,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-081d19b3-042c-4f9f-9a8d-4d7b363aefe7 button.colab-df-convert');\n",
+              "        document.querySelector('#df-1cde77ac-2547-4e30-b0c1-3141fc438310 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-081d19b3-042c-4f9f-9a8d-4d7b363aefe7');\n",
+              "        const element = document.querySelector('#df-1cde77ac-2547-4e30-b0c1-3141fc438310');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -6499,8 +6483,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-6341b6f3-d1e6-434b-95f6-1bec7761ca4f\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6341b6f3-d1e6-434b-95f6-1bec7761ca4f')\"\n",
+              "<div id=\"df-7637518c-c512-40ac-bd89-1b2b71808bb8\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7637518c-c512-40ac-bd89-1b2b71808bb8')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -6619,14 +6603,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-6341b6f3-d1e6-434b-95f6-1bec7761ca4f button');\n",
+              "        document.querySelector('#df-7637518c-c512-40ac-bd89-1b2b71808bb8 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_7c478056-fd9f-4c7e-a564-600ba50a7976\">\n",
+              "  <div id=\"id_1350533d-4477-41fa-9cf4-691187ac783a\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -6670,7 +6654,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_7c478056-fd9f-4c7e-a564-600ba50a7976 button.colab-df-generate');\n",
+              "        document.querySelector('#id_1350533d-4477-41fa-9cf4-691187ac783a button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -6687,11 +6671,11 @@
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
               "variable_name": "pet_df",
-              "summary": "{\n  \"name\": \"pet_df\",\n  \"rows\": 7,\n  \"fields\": [\n    {\n      \"column\": \"pets_name\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 3,\n        \"samples\": [\n          \"Purrsloud\",\n          \"Barksalot\",\n          \"Meowsalot\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"pets_species\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"Dog\",\n          \"Cat\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"pets_favFoods\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 6,\n        \"samples\": [\n          \"wet food\",\n          \"dry food\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"pets_birthYear\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 3,\n        \"min\": 2008,\n        \"max\": 2016,\n        \"num_unique_values\": 3,\n        \"samples\": [\n          2016,\n          2008\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"pets_photo_URL\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 3,\n        \"samples\": [\n          \"/images/cat-2.jpg\",\n          \"/images/dog-1.jpg\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"pets_features_size\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 3,\n        \"samples\": [\n          \"medium\",\n          \"short\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"pets_features_weight\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 3,\n        \"min\": 5,\n        \"max\": 15,\n        \"num_unique_values\": 3,\n        \"samples\": [\n          10,\n          5\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "summary": "{\n  \"name\": \"pet_df\",\n  \"rows\": 7,\n  \"fields\": [\n    {\n      \"column\": \"pets_name\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 3,\n        \"samples\": [\n          \"Purrsloud\",\n          \"Barksalot\",\n          \"Meowsalot\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"pets_species\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"Dog\",\n          \"Cat\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"pets_favFoods\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 6,\n        \"samples\": [\n          \"wet food\",\n          \"dry food\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"pets_features_size\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 3,\n        \"samples\": [\n          \"medium\",\n          \"short\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"pets_features_weight\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 3,\n        \"min\": 5,\n        \"max\": 15,\n        \"num_unique_values\": 3,\n        \"samples\": [\n          10,\n          5\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
-          "execution_count": 66
+          "execution_count": 70
         }
       ]
     }
